# Lumi-Hub

./: .gitignore  protocol.json  readme.md  test_echo.py  test_mcp.py
client/: .gitignore  pubspec.yaml
client/android/: settings.gradle.kts
client/android/app/: build.gradle.kts
client/client/: README.md  pubspec.yaml
client/client/test/: widget_test.dart
client/client/windows/: CMakeLists.txt
client/client/windows/runner/: Runner.rc  main.cpp
client/lib/: main.dart
client/lib/models/: message.dart
client/lib/screens/: auth_screen.dart  bootstrap_screen.dart  chat_screen.dart  chat_screen_input_bar.dart  chat_screen_message_bubbles.dart  chat_screen_message_list.dart  chat_screen_sidebar.dart  chat_screen_sidebar_widgets.dart  mcp_settings_editor_dialog.dart  mcp_settings_models.dart  mcp_settings_screen.dart  mcp_settings_widgets.dart  resource_package_screen.dart  unity_launch_screen.dart  voice_settings_screen.dart
client/lib/screens/components/: approval_dialog.dart  (+1 more)
client/lib/services/: app_settings.dart  bootstrap_service.dart  resource_package_service.dart  unity_launcher.dart  ws_service.dart  ws_service_tts.dart  ws_service_upload.dart
client/lib/theme/: app_theme.dart
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
cpp_launcher/: CMakeLists.txt
cpp_launcher/src/: env_checker.cpp  env_checker.h  main.cpp
host/: __init__.py  main.py  mcp_manager.py  metadata.yaml  ws_server.py
host/database/: manager.py
host/handlers/: __init__.py
(+2 files in other folders)
